# vibe-slop-detector

./: .gitignore  DEVLOG.md  README.md  TAXONOMY.md  adb_slop_report.json  pyproject.toml
test/: analyze.py  benchmark.py  collect_human.py
test/results/: raw_20260704_202634.jsonl  raw_20260704_202659.jsonl  raw_20260704_202915.jsonl  raw_human_20260704_204303.jsonl  report_20260704_211029.md  summary_20260704_211029.json
tests/fixtures/: sample_slop.py
vibe_slop/: __init__.py  analyzer.py  cli.py  models.py
vibe_slop/llm/: judge.py
vibe_slop/report/: human.py  machine.py
vibe_slop/static/: engine.py
vibe_slop/static/rules/: ai_signature.py  dead_import.py  false_safety_net.py  generic_naming.py  god_function.py  magic_number.py  todo_graveyard.py  void_abstraction.py
